# daily-vibe

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/daily_vibe/: __init__.py  cli.py
tests/: test_cli.py
